# Data-Processing-Pipeline

./: Pipeline.ipynb  Processing.ipynb  README.md  pyproject.toml
config/: settings.toml
data/processed/: out3.csv  out4.csv  output.csv  output2.csv
data/raw/: input.csv
src/my_pipeline/: __init__.py  cli.py  encode.py  extract.py  load.py  logger.py  normalize.py  outliers.py  profiler.py  progress.py  transform.py
tests/: test_pipeline.py
